// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle label prop 1`] = `
<scale-card label="card label">
  <mock:shadow-root>
    <div class="card-border" part="border">
      <div aria-label="card label" class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle rel prop 1`] = `
<scale-card rel="card rel">
  <mock:shadow-root>
    <div class="card-border" part="border">
      <div class="card" part="base" rel="card rel" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle styles prop 1`] = `
<scale-card styles="color=red">
  <mock:shadow-root>
    <style>
      color=red
    </style>
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle target prop 1`] = `
<scale-card target="card target">
  <mock:shadow-root>
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="card target">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle to prop 1`] = `
<scale-card to="adresse">
  <mock:shadow-root>
    <div class="card-border" part="border">
      <a class="card card--interactive" href="adresse" part="base interactive" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </a>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should match snapshot 1`] = `
<scale-card>
  <mock:shadow-root>
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;
